# my_private_git

./: README.md
TBOX_CommonAPI/: CMakeLists.txt  README  vsomeip-client.json  vsomeip-local.json  vsomeip-service.json
TBOX_CommonAPI/demo_app/: CMakeLists.txt  ModuleXXXClient.cpp  ModuleXXXClientModuleA.c  ModuleXXXClientModuleA.cpp  ModuleXXXClientModuleB.c  ModuleXXXClientModuleB.cpp  ModuleXXXService.c  ModuleXXXService.cpp
TBOX_CommonAPI/fidl/: ModuleXXX-SomeIP.fdepl  ModuleXXX.fidl  autogen.sh
TBOX_CommonAPI/src/: ModuleXXXClientImpl.cpp  ModuleXXXClientImpl.h  ModuleXXXClientImpl.hpp  ModuleXXXService.cpp  ModuleXXXServiceImpl.cpp  ModuleXXXServiceImpl.h  ModuleXXXServiceImpl.hpp
TBOX_CommonAPI/tool/commonapi_core_generator/configuration/org.eclipse.core.runtime/.manager/: .fileTable.7  .fileTable.8
TBOX_CommonAPI/tool/commonapi_core_generator/configuration/org.eclipse.osgi/: framework.info.7
TBOX_CommonAPI/tool/commonapi_core_generator/configuration/org.eclipse.osgi/.manager/: .fileTable.7  .fileTable.8
TBOX_CommonAPI/tool/commonapi_someip_generator/configuration/org.eclipse.core.runtime/: .table.1
TBOX_CommonAPI/tool/commonapi_someip_generator/configuration/org.eclipse.core.runtime/.manager/: .fileTable.7  .fileTable.8
TBOX_CommonAPI/tool/commonapi_someip_generator/configuration/org.eclipse.osgi/: framework.info.7
TBOX_CommonAPI/tool/commonapi_someip_generator/configuration/org.eclipse.osgi/.manager/: .fileTable.7  .fileTable.8
